--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
     <module>okhttp-testing-support</module>
     <module>okhttp-tls</module>
     <module>okhttp-urlconnection</module>
+    <!-- TODO(jwilson): remove after refactor -->
+    <module>okhttp-hpacktests</module>
 
     <module>okhttp-logging-interceptor</module>
 
@@ -53,6 +55,7 @@
 
     <!-- Test Dependencies -->
     <junit.version>4.12</junit.version>
+    <assertj.version>3.11.1</assertj.version>
 
     <!-- platform test mode -->
     <okhttp.platform>platform</okhttp.platform>
@@ -94,6 +97,11 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>${assertj.version}</version>
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
